--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,7 @@
     "eslint": "^7.23.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-react": "^7.23.1",
+    "jest": "^28.1.0",
     "prettier": "^2.2.1"
   }
 }
