--- a/backend/package.json
+++ b/backend/package.json
@@ -8,6 +8,8 @@
     "heroku-postbuild": "cd frontend && npm install && npm run build"
   },
   "dependencies": {
+    "chart.js": "^3.7.1",
+    "react-chartjs-2": "^4.1.0",
     "connect-mongo": "^4.4.1",
     "cookie-parser": "~1.4.4",
     "crypto-js": "^4.0.0",
@@ -22,6 +24,7 @@
     "passport-local": "^1.0.0"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.16.7",
     "eslint": "^7.23.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-react": "^7.23.1",
